RESOLVED FIXED233287
[LFC][IFC] Glyphs that conditionally hang are taken into account for max-content only
https://bugs.webkit.org/show_bug.cgi?id=233287
Summary [LFC][IFC] Glyphs that conditionally hang are taken into account for max-cont...
Attachments
Patch (3.44 KB, patch)
2021-11-17 15:28 PST, alan
no flags
alan
Comment 1 2021-11-17 15:28:48 PST
EWS
Comment 2 2021-11-18 06:20:52 PST
Committed r285999 (244396@main): <https://commits.webkit.org/244396@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444589 [details].
Radar WebKit Bug Importer
Comment 3 2021-11-18 06:21:26 PST
Note You need to log in before you can comment on or make changes to this bug.