[LFC][IFC] Glyphs that conditionally hang are taken into account for max-content only https://bugs.webkit.org/show_bug.cgi?id=233287

Reviewed by Antti Koivisto.

Remove hanging glyphs for min-content only. It simply means that content followed by (pre-wrap) whitespace may make shrink wrapped lines wider.

* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::close):
* rendering/RenderBlockFlow.cpp:



Canonical link: https://commits.webkit.org/244396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285999 268f45cc-cd09-0410-ab3c-d52691b4dbfc